1999-04-16  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Fix bug 807 (Freecell dumps core if you win), thanks to
	Ainsley Pereira for the fix.

1999-03-12  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Kill the history once you win, so that you can't undo and
	then win all over again.

1999-03-12  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Added a global mb variable, checks for duplicate dialogs
	from the exit, restart, and new functions.

1999-03-11  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Added lots of calls to gnome_dialog_set_parent.  Some
	dialogs were modal that didn't need to be, fixed.  Spelling
	corrections.  Stopped setting dialog's position, as this is set
	globally for GNOME in a capplet.

	* menu.c: Removed .'s from the tooltips on the toolbar.  Cleaned up
	some of the tooltips/menuitems.  Made the "New with seed" menu and
	toolbar pixmaps consistant.

	* option-dialog.c: Tweaked the labels in the option dialog a little.

1999-03-11  Ian Peters  <itp@gnu.org>

	* card.c: (deck_shuffle): Hopefully fixed the "King of Spades is always
	in the top left" bug.

1999-02-23  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* freecell.desktop: Recover the currupted Korean translation.

1998-12-06  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* io-gtk.c: Replaced all 'gnome_dialog_set_modal' calls with
 	'gtk_window_set_modal'.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* option-dialog.c (option_dialog_apply_callback): added just one
	GPOINTER_TO_INT where it was apropriate 
	
	* io-gtk.c: fixed a few cast done w/o GPOINTER_TO_INT and changed some
	int's to gint's

1998-11-22  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* game.c: Applied patch by <puckett+@andrew.cmu.edu>.  Now use all
	of the available free fields.

1998-11-21  Felix Bellaby <felix@pooh.u-net.com>
	* card.h: synced with card library.
	* card.c: synced with card library.
	* card-draw.c: synced with card library.

1998-11-19  Richard Hestilow  <hestgray@ionet.net>
	