@@ -1,3 +1,10 @@
+1999-07-08  Ian Peters  <itp@gnu.org>
+
+	* io-gtk.c, game.c: Finally fix for good and dead anything related to
+	the history, undo, dumping core when you win, clicking yes to a new
+	game, etc etc.  I think... :-)  Special thanks to my Debian maintainer
+	for helpful patches.  (closes: #1076, #1179, #1430)
+
 1999-04-16  Ian Peters  <itp@gnu.org>
 
 	* io-gtk.c: Fix bug 807 (Freecell dumps core if you win), thanks to
